[tool.poetry]
name = "ma"
version = "0.0.1"
description = "Masterarbeit Schnic"
authors = ["schnic1 <nicolas.schaffner>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "1.4.3"
numpy = "1.21.0"
ta = "0.10.1"
gym = "0.21.0"
stable-baselines3 = "1.6.0"
tensorboard = "^2.10.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
